// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeterministicArchivist get gets multiple boundwitness 1`] = `
[
  {
    "_signatures": [
      "325501822063bf69e34f6a64f96ef1e55e8eed5060c0dc300271be82b4df024163b2b294018c5d06df160b20394f460b955c77d8a5147ec7f1bafa79b4798662",
    ],
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "_signatures": [
      "1810b9f9c6623adf38d0093ea6f3c2125570ed1ee757dbe9e9221b4ffb3920ecf4eee8a0200381f4011a27bb061bc3809491b0e9dd962c87532801da95e9c7b4",
    ],
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "1c9033e467d6877e2c84a70b29212a585bd6fd448bccfcc12adf0505c18984f6",
    ],
    "payload_schemas": [
      "network.xyo.test",
    ],
    "previous_hashes": [
      "58c138dd2aab7bd78bd2c3d80bebf900d3f99f506e201f1f0ace1d473fc45d76",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "_signatures": [
      "29a8dfe2cf7675e8c371763d6d8c7d9b0990145191967c6e399fff7854cd22390d6a8a7f4ae7628ac62deea6c34af33c37623950b1aba6ae4b8c88683d615c20",
    ],
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "1137543b5805a18e8f39cb7debe49ddf58a1de00c46ed7310baf7ebcfdf435a2",
      "aa36451ef0079af6cc2f86eaa05c7a93fb3c92098e18d0ce857e9e3072b32a85",
    ],
    "payload_schemas": [
      "network.xyo.debug",
      "network.xyo.test",
    ],
    "previous_hashes": [
      "c5e4a2513ea22a7ccfa359207b4d83af68688dca8c9a3f5d39106ba6e599b481",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist get gets multiple payloads 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
  {
    "nonce": 2,
    "schema": "network.xyo.test",
  },
  {
    "nonce": 3,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist get gets single boundwitness 1`] = `
[
  {
    "_signatures": [
      "325501822063bf69e34f6a64f96ef1e55e8eed5060c0dc300271be82b4df024163b2b294018c5d06df160b20394f460b955c77d8a5147ec7f1bafa79b4798662",
    ],
    "addresses": [
      "10ca1959336ea208bcdf00dd6d6637aec91a4c0e",
    ],
    "payload_hashes": [
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
    ],
    "payload_schemas": [
      "network.xyo.debug",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;

exports[`DeterministicArchivist get gets single payload 1`] = `
[
  {
    "nonce": 1,
    "schema": "network.xyo.debug",
  },
]
`;

exports[`DeterministicArchivist insert inserts multiple payloads 1`] = `
[
  {
    "_signatures": [
      "f96585b002a44de673000dac2db724da31f1ff95b300495e5b22b1d3c94871a12c8df1681d5feccf7ca914cd9180592f8c1be113fbb4d51998942fad4a60555b",
      "ead2a867b47de7367eb338edc69bbbc405f700de3dc14cd95a7a5690bb803670b947e7f69df776cc3cbc774389a3bdc9c9cf4d83c59cfabb4d435810ef6a7980",
    ],
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
      "babe1d55e51844ea1cdc6b4dcbb649bb08e3cc3c",
    ],
    "payload_hashes": [
      "e6abe43218cb409c4e6d33863b680977ef164d4b96fb90edd710b5703a0a474f",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
    ],
    "previous_hashes": [
      "e6abe43218cb409c4e6d33863b680977ef164d4b96fb90edd710b5703a0a474f",
      "c9be79afd40cf9c7597c4048cce5dbbfd59c46d9dc57053d287f46a873d844b0",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789002,
  },
  {
    "_signatures": [
      "cdb2be0da56398260d6aa880bc5817d4206d85b7aedcd11bc71f571aefd2983b4b3836199d5ebc741636b36892743c808d35b8184dc969c4b82f059e83132488",
    ],
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
    ],
    "payload_hashes": [
      "d0796172dfb3f66f62e69b1120ef10c6e767e8b260272da5802865e7add48bcf",
      "e307ab9ba8ea876135ae22ff47114513cf7fefe024dab21d89d8584378df6b11",
      "1137543b5805a18e8f39cb7debe49ddf58a1de00c46ed7310baf7ebcfdf435a2",
      "aa36451ef0079af6cc2f86eaa05c7a93fb3c92098e18d0ce857e9e3072b32a85",
      "4e2d335e7f54334b10e30706546f820a750974381586ec9aa2eca6f916249b25",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
      "network.xyo.boundwitness",
      "network.xyo.debug",
      "network.xyo.test",
      "network.xyo.query.archivist.insert",
    ],
    "previous_hashes": [
      "c9be79afd40cf9c7597c4048cce5dbbfd59c46d9dc57053d287f46a873d844b0",
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789002,
  },
]
`;

exports[`DeterministicArchivist insert inserts single payload 1`] = `
[
  {
    "_signatures": [
      "6eee91bc03e08d49f2bc17c8247212172148fa614970e3358b5d682dc6492a1344d9e0adfa50538d620709f6a30ef9907f1906735899e351b195614ea207583b",
      "4b7195c2ab88cb296369aec412e720e507cda35df8d34deb9b27c6734fae1795aac8cc10905e5b2f216b74c86b1c29077c9876cb2909092375a81138bfecfd85",
    ],
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
      "babe1d55e51844ea1cdc6b4dcbb649bb08e3cc3c",
    ],
    "payload_hashes": [
      "41cbafba020bda2860631c34fb9db7e8f984d31280b8f5ecc3b631150907baec",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
    ],
    "previous_hashes": [
      "41cbafba020bda2860631c34fb9db7e8f984d31280b8f5ecc3b631150907baec",
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
  {
    "_signatures": [
      "149acaabd0b1309fcac8eaf05ad58dcd0bc9ecb77e8a20b363483d771e5097c26a7ebb0dfc44141738832ed4c08383cdf3076433d077700b4e46cc19ca0d63af",
    ],
    "addresses": [
      "daddab0e0468c920bd5aff4b14fd94c20a598055",
    ],
    "payload_hashes": [
      "860b201b9d8891de3917ca7bfc5a4ec8898f6ff36b3ded59c9b279be38a45f78",
      "58c138dd2aab7bd78bd2c3d80bebf900d3f99f506e201f1f0ace1d473fc45d76",
      "15b8d0e30ca5aa96ca6cc9e1528c075aec88cd3f2c3eb0394fde647eb4bf4547",
      "81b707afc5742a5501a4fac4ad56132928ce711de36de7aeda936e08066cfcad",
    ],
    "payload_schemas": [
      "network.xyo.boundwitness",
      "network.xyo.boundwitness",
      "network.xyo.debug",
      "network.xyo.query.archivist.insert",
    ],
    "previous_hashes": [
      null,
    ],
    "schema": "network.xyo.boundwitness",
    "timestamp": 123456789000,
  },
]
`;
